# vid.stab

./: .gitignore  CMakeLists.txt  README.md
ffmpeg-vidstab/snap/: snapcraft.yaml
patches/: vf_vidstabtransform.patch
src/: boxblur.c  clFuncs.c  clFuncs.h  localmotion2transform.c  motiondetect.c  motiondetect_opt.c  transform.c  transform.h  transformfixedpoint.c  transformfixedpoint.h  transformtype.c  transformtype.h  vsvector.c
src/kernels/: vectorAdd.cl
